<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/create_bookmark_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/bookmark_dialog_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/create_bookmark_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/create_bookmark_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/create_bookmark_url_label"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/create_bookmark_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/create_bookmark_name_label"
            android:layout_alignLeft="@id/create_bookmark_url"
            android:layout_alignRight="@id/create_bookmark_url"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/create_bookmark_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/create_bookmark_url"
            android:layout_alignLeft="@id/create_bookmark_name_label"
            android:text="@string/bookmark_dialog_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" >

        <TextView
            android:id="@+id/create_bookmark_cancel"
            style="@style/buttonStyle"            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dip"
            android:layout_weight="1"
            android:text="@string/bookmark_dialog_cancel"
/>

        <TextView
            android:id="@+id/create_bookmark_ok"
            style="@style/buttonStyle"            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_weight="1"
            android:text="@string/bookmark_dialog_save"
/>
    </LinearLayout>

</LinearLayout>